fix(ui/page): make page subtitle appear below page title (#911)
* fix(form): fix type

* fix(page): fix page subtitle to appear below the title

* fix(page): add multiple butoon in page toolbar

--- a/packages/ui/src/assets/css/page.css
+++ b/packages/ui/src/assets/css/page.css
@@ -28,8 +28,8 @@
 
 .dz-page > .dz-page-header > .dz-page-title-wrapper {
   display: flex;
+  flex-direction: column;
   gap: var(--dz-page-gap);
-  flex-wrap: wrap;
 }
 
 .dz-page > .dz-page-header > .dz-page-toolbar {
